pygobject (3.10.0-2) UNRELEASED; urgency=low

  * debian/control.in: Add homepage field
  * debian/watch: Add support for more file formats

 -- Jackson Doak <noskcaj@ubuntu.com>  Wed, 09 Oct 2013 19:07:53 +1100

pygobject (3.10.0-1) unstable; urgency=low

  * New upstream release.
  * debian/control.in: Bump glib and g-i dependencies for new release.
  * debian/control.in: Drop explicit python3-dbg dependency, dh-python got
    fixed now (see #704579).
  * debian/control.in: Add at-spi2-core build dependency, as apparently this
    is somehow needed on the buildds (not reproducible in sbuild).
    (Closes: #715536)
  * debian/control.in: Add Breaks for older python-aptdaemon and
    software-center (Ubuntu specific) to avoid potential crash caused by new
    python-gi with old python-aptdaemon. (LP: #1173249)
  * debian/rules: Stop renaming the *.so files, upstream does it correctly
    now.

 -- Martin Pitt <mpitt@debian.org>  Tue, 24 Sep 2013 09:37:30 +0200

pygobject (3.8.3-1) unstable; urgency=low

  * New upstream bug fix release.

 -- Martin Pitt <mpitt@debian.org>  Fri, 05 Jul 2013 08:02:14 +0200

pygobject (3.8.2-1) unstable; urgency=low

  * Reset watch file to look for stable releases only.
  * New upstream bug fix release.
  * Re-enable 01_cairo_region.patch, now that a fixed py3cairo landed in
    unstable.

 -- Martin Pitt <mpitt@debian.org>  Wed, 15 May 2013 08:54:32 +0200

pygobject (3.8.1-3) unstable; urgency=low

  * debian/rules:
    + Don't abort if the test suite fails on hurd.
    + We build for all the available python flavours. Previously we
      were removing the prefix to which we install before installing
      each flavour. We didn't notice any problems because we were
      building only once for python3, but now that we build for 3.2
      and 3.3, let's not remove the python3.2 bits when we install
      the 3.3 stuff. This fixes pygobject on python3.2. Closes: #707318.