@@ -1,0 +1,1 @@
+extend-diff-ignore = "(^|/)(config\.sub|config\.guess|Makefile)$"
