@@ -1,6 +1,11 @@
 pygobject (3.10.0-2) UNRELEASED; urgency=low
 
-  * debian/control.in: Add homepage field
+  * Create debian/source/options
+  * debian/control.in: 
+    - Add homepage field
+    - Use canonical VCS fields
+    - B-dep on dh-autoreconf
+  * debian/rules: Add autoreconf
   * debian/watch: Add support for more file formats
 
  -- Jackson Doak <noskcaj@ubuntu.com>  Wed, 09 Oct 2013 19:07:53 +1100
